Build intelligence for data shredding.